+ (тень уменьшил) / - (с кнопкой не понятно) Постарайтесь сделать вид поста в БЛОГАХ как в макете, это касается прежде всего расстояния между заголовком и анонсом, а также кнопка «Читать полностью» не такая щас, и тонировка туманная в исходнике менее громоздская, и иконки социальных сетей другие.
Макет: https://clip2net.com/s/3XyVhMH

Реал: https://clip2net.com/s/3XyVCdp

+ И разместите там пожалуйста кнопки Пагинации – в попутчиках или еще где то были вы делали уже.

Интересное в мире (статьи, главная)
+ Чуть поближе повыше поднимите строку дата публикации к тексту выше – чуть-чуть  https://clip2net.com/s/3XyWHIp  а то сейчас оно совсем близко к фотографии ниже и может запутать что к фото относится.

+ И также чуть поближе к названию стран пододвиньте кол-во статей https://clip2net.com/s/3XyWHIp

- (не понял задачу) Поисковую полосу чуть правее чтоб в сетке с баннерами ниже была https://clip2net.com/s/3XyX05X

Страница Статьи
+ Колонку Новости туризма переименуйте в Последние материалы https://clip2net.com/s/3XyXhIg

+( отступ между датой и просмотрами уменьшил)/- (шрифты используются те же) И шрифт и вид в строчках https://clip2net.com/s/3XyXoD5 в макете больше нравится постарайтесь поближе к оригиналу. Например расстояние даты публикации и заголовка

+-/И отступы между текстами и фото и абзацами, и фото постарайтесь как в макете.

--- a/src/articles.html
+++ b/src/articles.html
@@ -298,7 +298,7 @@
                                                 <img src="images/article_collage_content_1.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">Контактный досмотр в аэропортах США и России</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -321,7 +321,7 @@
                                                 <img src="images/article_collage_content_2.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -344,7 +344,7 @@
                                                 <img src="images/article_collage_content_3.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">Опубликован рейтинг лучших аэропортов мира в 2017 году</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -367,7 +367,7 @@
                                                 <img src="images/article_collage_content_4.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -390,7 +390,7 @@
                                                 <img src="images/article_collage_content_5.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">Опубликован рейтинг лучших аэропортов мира в 2017 году</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -413,7 +413,7 @@
                                                 <img src="images/article_collage_content_6.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -436,7 +436,7 @@
                                                 <img src="images/article_collage_content_7.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">Контактный досмотр в аэропортах США и России</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -459,7 +459,7 @@
                                                 <img src="images/article_collage_content_8.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -482,7 +482,7 @@
                                                 <img src="images/article_collage_content_9.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">Опубликован рейтинг лучших аэропортов мира в 2017 году</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -505,7 +505,7 @@
                                                 <img src="images/article_collage_content_10.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -528,7 +528,7 @@
                                                 <img src="images/article_collage_content_11.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">Опубликован рейтинг лучших аэропортов мира в 2017 году</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -551,7 +551,7 @@
                                                 <img src="images/article_collage_content_12.jpg" alt="" class="uk-width-1-1">
                                             </div>
                                             <a href="#" class="tm-article-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                            <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                            <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                         </div>
 
                                         <div>
@@ -658,52 +658,52 @@
 
                                         <ul class="tm-nav-divider uk-nav uk-list-divider">
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Вьетнам</a>
+                                                <a href="#">Вьетнам</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
 
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Греция</a>
+                                                <a href="#">Греция</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">98</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Доминикана</a>
+                                                <a href="#">Доминикана</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">1198</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Индия</a>
+                                                <a href="#">Индия</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">78</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Индонезия</a>
+                                                <a href="#">Индонезия</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">1198</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Турция</a>
+                                                <a href="#">Турция</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Франция</a>
+                                                <a href="#">Франция</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Шри-Ланка</a>
+                                                <a href="#">Шри-Ланка</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Куда угодно</a>
+                                                <a href="#">Куда угодно</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Петербург</a>
+                                                <a href="#">Петербург</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Европа</a>
+                                                <a href="#">Европа</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
                                             <li class="uk-flex uk-flex-middle">
-                                                <a href="#" class="uk-margin-small-right">Море</a>
+                                                <a href="#">Море</a>
                                                 <span class="uk-text-small uk-text-muted">(<span class="tm-count-popular-country">368</span>)</span>
                                             </li>
                                         </ul>
