--- a/src/blogs.html
+++ b/src/blogs.html
@@ -742,9 +742,16 @@
                                         </article>
                                     </li>
                                 </ul>
-
                             </div>
-
+                            <ul class="uk-pagination uk-flex-center" uk-margin>
+                                <li><a href="#"><span uk-pagination-previous></span></a></li>
+                                <li class="uk-active"><a href="#">1</a></li>
+                                <li><a href="#">2</a></li>
+                                <li><a href="#">3</a></li>
+                                <li><a href="#">4</a></li>
+                                <li><a href="#">5</a></li>
+                                <li><a href="#"><span uk-pagination-next></span></a></li>
+                            </ul>
                         </div>
 
                         <!-- Aside right -->
@@ -763,7 +770,7 @@
 
                                     <!--News list-->
                                     <div class="tm-news-small">
-                                        <h3>Новости туризма</h3>
+                                        <h3>Последние материалы</h3>
                                         <ul class="tm-news-list uk-list uk-list-large uk-list-divider">
                                             <li class="uk-child-width-expand uk-flex">
                                                 <div class="uk-width-auto uk-margin-small-right">
