--- a/src/articles-inner.html
+++ b/src/articles-inner.html
@@ -312,7 +312,7 @@
 
                                      <!-- Last materials list-->
                                     <div class="tm-last-materials">
-                                        <h3>Новости туризма</h3>
+                                        <h3>Последние материалы</h3>
                                         <ul class="tm-news-list uk-list uk-list-large uk-list-divider uk-text-little">
                                             <li>
                                                 <div class="uk-margin-small-bottom">
@@ -320,7 +320,7 @@
                                                         и России
                                                     </a>
                                                 </div>
-                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                      uk-grid>
                                                     <div>21.03.2017 11:01</div>
                                                     <div>
@@ -335,7 +335,7 @@
                                                         королей»
                                                     </a>
                                                 </div>
-                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                      uk-grid>
                                                     <div>21.03.2017 11:01</div>
                                                     <div>
@@ -350,7 +350,7 @@
                                                         и России
                                                     </a>
                                                 </div>
-                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                      uk-grid>
                                                     <div>21.03.2017 11:01</div>
                                                     <div>
@@ -365,7 +365,7 @@
                                                         королей»
                                                     </a>
                                                 </div>
-                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                      uk-grid>
                                                     <div>21.03.2017 11:01</div>
                                                     <div>
@@ -380,7 +380,7 @@
                                                         и России
                                                     </a>
                                                 </div>
-                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                      uk-grid>
                                                     <div>21.03.2017 11:01</div>
                                                     <div>
@@ -395,7 +395,7 @@
                                                         королей»
                                                     </a>
                                                 </div>
-                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                      uk-grid>
                                                     <div>21.03.2017 11:01</div>
                                                     <div>
@@ -410,7 +410,7 @@
                                                         и России
                                                     </a>
                                                 </div>
-                                                <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                      uk-grid>
                                                     <div>21.03.2017 11:01</div>
                                                     <div>
@@ -446,7 +446,7 @@
 
                                     <!--News list-->
                                     <div class="tm-news-small">
-                                        <h3>Новости туризма</h3>
+                                        <h3>Последние материалы</h3>
                                         <ul class="tm-news-list uk-list uk-list-large uk-list-divider">
                                             <li class="uk-child-width-expand uk-flex">
                                                 <div class="uk-width-auto uk-margin-small-right">
@@ -458,7 +458,7 @@
                                                     <div class="uk-margin-small-bottom">
                                                         <a href="" class="uk-link-text">Кафедральный собор Валетты</a>
                                                     </div>
-                                                    <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                    <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                          uk-grid>
                                                         <div>21.03.2017 11:01</div>
                                                         <div>
@@ -480,7 +480,7 @@
                                                             графстве
                                                             Шропшир в Англии</a>
                                                     </div>
-                                                    <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                    <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                          uk-grid>
                                                         <div>21.03.2017 11:01</div>
                                                         <div>
@@ -500,7 +500,7 @@
                                                     <div class="uk-margin-small-bottom">
                                                         <a href="" class="uk-link-text">Кафедральный собор Валетты</a>
                                                     </div>
-                                                    <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                    <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                          uk-grid>
                                                         <div>21.03.2017 11:01</div>
                                                         <div>
@@ -522,7 +522,7 @@
                                                             проживал в
                                                             Таиланде без визы</a>
                                                     </div>
-                                                    <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                    <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                          uk-grid>
                                                         <div>21.03.2017 11:01</div>
                                                         <div>
@@ -544,7 +544,7 @@
                                                             проживал в
                                                             Таиланде без визы</a>
                                                     </div>
-                                                    <div class="uk-flex uk-flex-between uk-text-muted uk-text-small uk-grid-small"
+                                                    <div class="uk-flex uk-text-muted uk-text-small uk-grid-small"
                                                          uk-grid>
                                                         <div>21.03.2017 11:01</div>
                                                         <div>
