--- a/src/index.html
+++ b/src/index.html
@@ -373,7 +373,7 @@
 
                                     <!--News list-->
                                     <div class="tm-news-small">
-                                        <h3>Новости туризма</h3>
+                                        <h3>Последние материалы</h3>
                                         <ul class="tm-news-list uk-list uk-list-large uk-list-divider">
                                             <li class="uk-child-width-expand uk-flex">
                                                 <div class="uk-width-auto uk-margin-small-right">
@@ -764,7 +764,7 @@
                                         <span>Пушкин — Россия</span>
                                     </div>
                                     <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                    <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                    <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
                                 <div>
@@ -798,7 +798,7 @@
                                         <span>Пушкин — Россия</span>
                                     </div>
                                     <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                    <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                    <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
                                 <div>
@@ -832,7 +832,7 @@
                                         <span>Пушкин — Россия</span>
                                     </div>
                                     <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                    <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                    <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
                                 <div>
@@ -866,7 +866,7 @@
                                         <span>Пушкин — Россия</span>
                                     </div>
                                     <a href="#" class="tm-blog-title uk-link-text">8 марта на выставку <br> доспехов</a>
-                                    <p>Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
+                                    <p class="uk-margin-small-bottom">Да, совершенно неожиданно, 8 марта мы оказались в Арсенале, новом музее Пушкина.</p>
                                 </div>
 
                                 <div>
