--- a/src/airline-inner.html
+++ b/src/airline-inner.html
@@ -224,9 +224,151 @@
                     <div class="uk-child-width-expand@m" uk-grid>
                         <div>
 
+                            <h2>Аэрофлот (Aeroflot)</h2>
+
                             <!-- Airline reviews -->
                             <div>
-                                <h3>Отзывы об авиакомпании Аэрофлот (Aeroflot)</h3>
+
+                                <!-- Article details -->
+                                <article class="uk-article">
+                                    <h2 class="uk-margin-small-bottom">Отзывы об авиакомпании Аэрофлот (Aeroflot)</h2>
+
+                                    <div class="tm-panel-bordered">
+                                        <div class="uk-child-width-expand@s" uk-grid>
+                                            <div class="uk-width-auto@s">
+
+                                                    <div class="uk-margin-small-bottom">
+                                                        <img src="images/logo_aeroflot.jpg" alt="" class="uk-width-1-1">
+                                                    </div>
+                                                    <!--<div class="tm-grid-small uk-child-width-1-2 uk-text-little" uk-grid>
+                                                        <div class="uk-width-1-1">
+                                                            <img src="images/aeroflot_1.jpg" alt="" class="uk-width-1-1">
+                                                        </div>
+                                                        <div>
+                                                            <img src="images/aeroflot_2.jpg" alt="" class="uk-width-1-1">
+                                                        </div>
+                                                        <div>
+                                                            <img src="images/aeroflot_3.jpg" alt="" class="uk-width-1-1">
+                                                        </div>
+                                                        <div>
+                                                            <img src="images/aeroflot_4.jpg" alt="" class="uk-width-1-1">
+                                                        </div>
+                                                        <div>
+                                                            <img src="images/aeroflot_5.jpg" alt="" class="uk-width-1-1">
+                                                        </div>
+                                                    </div>-->
+
+                                            </div>
+
+                                            <div>
+                                                <p class="uk-text-medium uk-text-bold">ОАО «Аэрофлот - российский
+                                                    авиалинии» - крупнейшая российская авиакомпания, национальный
+                                                    авиаперевозчик. Штаб-квартира - в Москве.
+                                                </p>
+
+                                                <table class="uk-table">
+                                                    <tbody>
+                                                    <tr>
+                                                        <td>Cтрана:</td>
+                                                        <td>
+                                                            <a href="#">Россия</a>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Статус:</td>
+                                                        <td>Работает</td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <td>Код ИАТА:</td>
+                                                        <td>SU</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Код ИКАО:</td>
+                                                        <td>AFL</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Внутренний код:</td>
+                                                        <td>СУ</td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <td>Адрес:</td>
+                                                        <td>г. Москва, Ленинградский пр-т, д. 37, корп. 9</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Телефон:</td>
+                                                        <td>8 800 333 55 55</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>E-Mail:</td>
+                                                        <td>
+                                                            <a href="mailto:callcenter@aeroflot.ru">callcenter@aeroflot.ru</a>
+                                                        </td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Официальный сайт:</td>
+                                                        <td>
+                                                            <a href="#">aeroflot.ru</a>
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <td>Год образования:</td>
+                                                        <td>1923</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td>Базовые аэропорты:</td>
+                                                        <td>Москва Шереметьево (Moscow Sheremetyevo - SVO)</td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+
+                                                <hr class="tm-hr">
+
+                                                <h5 class="uk-text-uppercase">Самолетный парк:</h5>
+
+                                                <div uk-margin>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-blue uk-text-bold uk-text-untransformed">
+                                                        <i class="fa fa-plane" aria-hidden="true"></i> Boeing 777-300ER
+                                                    </a>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-blue uk-text-bold uk-text-untransformed">
+                                                        <i class="fa fa-plane" aria-hidden="true"></i> Boeing 737-300
+                                                    </a>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-blue uk-text-bold uk-text-untransformed">
+                                                        <i class="fa fa-plane" aria-hidden="true"></i> Airbus A330-200
+                                                    </a>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-blue uk-text-bold uk-text-untransformed">
+                                                        <i class="fa fa-plane" aria-hidden="true"></i> Airbus A330-300
+                                                    </a>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-blue uk-text-bold uk-text-untransformed">
+                                                        <i class="fa fa-plane" aria-hidden="true"></i> Airbus A321
+                                                    </a>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-blue uk-text-bold uk-text-untransformed">
+                                                        <i class="fa fa-plane" aria-hidden="true"></i> Airbus A320
+                                                    </a>
+                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-blue uk-text-bold uk-text-untransformed">
+                                                        <i class="fa fa-plane" aria-hidden="true"></i> Sukhoi SuperJet 100
+                                                    </a>
+                                                </div>
+
+
+
+                                                <div class="social-likes-wrapper"
+                                                     data-url="http://shared-url-example.com/">
+                                                    <div data-service="facebook" title="Share link on Facebook"></div>
+                                                    <div data-service="vkontakte" title="Share link on Vkontakte"></div>
+                                                    <div data-service="odnoklassniki"
+                                                         title="Share link on Odnoklassniki"></div>
+                                                    <div data-service="twitter" title="Share link on Twitter"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </article>
+
+
 
                                 <!-- Layout items -->
                                 <ul class="tm-articles-list uk-list" uk-margin="margin: uk-margin-top">
