--- a/src/airlines.html
+++ b/src/airlines.html
@@ -827,11 +827,11 @@
 
                                 </div>
 
-                                <div class="uk-width-auto@s uk-width-1-1@m">
+                                <div class="uk-width-auto@s uk-width-1-1@m uk-flex uk-flex-center">
 
                                     <!--Banner-->
                                     <a href="#" class="uk-card">
-                                        <img src="images/banner.jpg" alt="" class="uk-width-1-1">
+                                        <img src="images/banner.jpg" alt="">
                                     </a>
 
                                 </div>
