--- a/src/articles.html
+++ b/src/articles.html
@@ -715,11 +715,11 @@
 
                                 </div>
 
-                                <div class="uk-width-auto@s uk-width-1-1@m uk-margin-medium-top">
+                                <div class="uk-width-auto@s uk-width-1-1@m uk-margin-medium-top uk-flex uk-flex-center">
 
                                     <!--Banner-->
                                     <a href="#" class="uk-card">
-                                        <img src="images/banner.jpg" alt="" class="uk-width-1-1">
+                                        <img src="images/banner.jpg" alt="">
                                     </a>
 
                                 </div>
