--- a/src/index.html
+++ b/src/index.html
@@ -324,11 +324,11 @@
                                     </a>
                                 </div>
 
-                                <div class="uk-width-medium uk-visible@m">
+                                <div class="uk-width-medium uk-visible@m uk-flex uk-flex-center">
 
                                     <!-- Banner -->
                                     <a href="#" class="uk-card">
-                                        <img src="images/banner.jpg" alt="" class="uk-width-1-1">
+                                        <img src="images/banner.jpg" alt="">
                                     </a>
 
                                 </div>
@@ -359,11 +359,11 @@
                         <!-- Aside right (main page) -->
                         <aside class="uk-width-medium@m uk-width-large@l">
                             <div class="uk-child-width-1-1  uk-grid-medium" uk-grid>
-                                <div class="uk-width-auto@s uk-width-1-1@m uk-hidden@m">
+                                <div class="uk-width-auto@s uk-width-1-1@m uk-hidden@m uk-flex uk-flex-center">
 
                                     <!-- Banner -->
                                     <a href="#" class="uk-card">
-                                        <img src="images/banner.jpg" alt="" class="uk-width-1-1">
+                                        <img src="images/banner.jpg" alt="">
                                     </a>
 
                                 </div>
