--- a/src/photo.html
+++ b/src/photo.html
@@ -729,11 +729,11 @@
                         <!-- Aside right -->
                         <aside class="uk-width-medium@m">
                             <div class="uk-child-width-1-1 uk-grid-medium" uk-grid>
-                                <div class="uk-width-auto@s uk-width-1-1@m">
+                                <div class="uk-width-auto@s uk-width-1-1@m uk-flex uk-flex-center">
 
                                     <!--Banner-->
                                     <a href="#" class="uk-card">
-                                        <img src="images/banner.jpg" alt="" class="uk-width-1-1">
+                                        <img src="images/banner.jpg" alt="">
                                     </a>
 
                                 </div>
