Страница «Визы» Заголовок Страны Шенгенского соглашения в макете по-другому смотрится Расстояние между заголовком Страны Шенгенского соглашения и картинкой огромной вше в макете немного другое, постарайтесь с делать как в макете +(цвет границы изменил, это также повлияло на цвет границы в статьях в аналогичном блоке, нижнюю границу убрал)- (ширина колнок в дизайне и в реале 240px, размер заголовка h3 усредненный) Колонка справа сейчас так https://clip2net.com/s/3XyYVB2  а в макете так https://clip2net.com/s/3XyYU1e  ка кто аккуратнее и еще под Латвией у вас щас в верстке как то наехал на кнопку пунктир.
Страница детальная Визы
+ Чуть пониже уберите заголовок «Краткосрочная виза» чуть пониже  https://clip2net.com/s/3XyYrXk  сейчас совсем прилипает к блоку с сайтами

+(цвет границы изменил, это также повлияло на цвет границы в статьях в аналогичном блоке, нижнюю границу убрал)- (ширина колнок в дизайне и в реале 240px, размер заголовка h3 усредненный)  Колонка справа сейчас так https://clip2net.com/s/3XyYVB2  а в макете так https://clip2net.com/s/3XyYU1e  ка кто аккуратнее и еще под Латвией у вас щас в верстке как то наехал на кнопку пунктир.

Фото
(вырезать фон) В верхней части экрана подложка не та сейчас у вас, в макете другая была. У вас сейчас просто СЕРЫЙ.

+ Расстояние в блоке 10 лучших фото тоже не такие как в макете.

+ БЛОК ПОСЛЕДНЕИ фото поднять повыше чтоб в сетке с баннером в колонке справа был

ГЛАВНАЯ СТРАНИЦА

+ Артур Вам макет ПОИСКА по сайту и Авторизации кидал вроде бы. В верхней части меню https://prnt.sc/laq6t3 они при кликанье всплывают.

--- a/src/visa-text.html
+++ b/src/visa-text.html
@@ -249,7 +249,7 @@
                                                                      target="_blank">www.ambafrance-ru.org</a></li>
                                 </ul>
 
-                                <div class="uk-tile uk-tile-primary uk-display-inline-block">
+                                <div class="uk-tile uk-tile-primary uk-display-inline-block uk-margin-small-top">
                                     <h4 class="uk-text-uppercase">Краткосрочная шенгенская виза категории С</h4>
                                 </div>
 
