blogs-interesting add and adaptive

--- a/src/articles.html
+++ b/src/articles.html
@@ -569,6 +569,7 @@
                                 </div>
                             </div>
 
+                            <!-- Pagination -->
                             <ul class="uk-pagination uk-flex-center" uk-margin>
                                 <li><a href="#"><span uk-pagination-previous></span></a></li>
                                 <li class="uk-active"><a href="#">1</a></li>
