social login script fix

--- a/src/index.html
+++ b/src/index.html
@@ -238,8 +238,6 @@
                                             <div class="tm-login-social uk-background-secondary uk-margin-bottom">
                                                 <div class="uk-child-width-expand uk-grid-collapse uk-flex-middle" uk-grid>
                                                     <div class="uk-width-auto">
-                                                       <!-- #TODO сделать сосети правильно, ресурс https://ulogin.ru/constructor.php?display=panel -->
-                                                        <script src="//ulogin.ru/js/ulogin.js"></script>
                                                         <div id="uLogin" data-ulogin="display=panel;theme=flat;fields=first_name,last_name;providers=vkontakte,facebook,odnoklassniki,google;hidden=;redirect_uri=http%3A%2F%2F;mobilebuttons=0;"></div>
                                                     </div>
                                                     <div>
@@ -1076,5 +1074,7 @@
 
 </div>
 
+<!--Scripts-->
+<script src="//ulogin.ru/js/ulogin.js"></script>
 </body>
 </html>
